hphp/hack/test/typecheck/continue_bad.php.exp
File "continue_bad.php", line 16, characters 18-18:
Encountered unexpected token '2'. (Parsing[1002])
